--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,20 +8,25 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".Main"
+            android:label="@string/title_activity_main" >
+
+        </activity>
+        <activity
+            android:name=".AddReminder"
+            android:label="@string/title_activity_add_remainder" >
+        </activity>
+        <activity
+            android:name=".Settings"
+            android:label="@string/title_activity_settings">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddRemainder"
-            android:label="@string/title_activity_add_remainder" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
+            android:name=".AboutUs"
+            android:label="@string/title_activity_about_us" >
         </activity>
     </application>
 
