--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,26 +8,26 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".Main"
+            android:name=".screens.Main"
             android:label="@string/title_activity_main" >
-
-        </activity>
-        <activity
-            android:name=".AddReminder"
-            android:label="@string/title_activity_add_remainder" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".screens.AddReminder"
+            android:label="@string/title_activity_add_remainder" >
+        </activity>
 
         <activity
-            android:name=".Settings"
+            android:name=".screens.Settings"
             android:label="@string/title_activity_settings">
+
 
         </activity>
         <activity
-            android:name=".AboutUs"
+            android:name=".screens.AboutUs"
             android:label="@string/title_activity_about_us" >
 
         </activity>
