--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,19 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".screens.Main"
+            android:name=".screens.DashBoardTabs"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
+        <activity
+            android:name=".screens.Main"
+            android:label="@string/title_activity_main" >
+        </activity>
+
         <activity
             android:name=".screens.AddReminder"
             android:label="@string/title_activity_add_remainder" >
